# euro

./: .gitignore  README.md  euro.py  pyproject.toml
