[tool.poetry]
name = "euro"
version = "0.1.0"
description = ""
authors = ["Carlos Souza <carlosspy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asciichartpy = "^1.5.25"
requests = "^2.32.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
